<resources>
    <string name="app_name">Voice Reminder</string>

    <!-- Activity_AlarmsList -->
    <string name="no_alarm">No reminders to show!</string>
    <string name="addAlarm">Add</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="toast_alarmSwitchedOn">Reminder set for %s from now.</string>
    <plurals name="day">
        <item quantity="one">\u0020day</item>
        <item quantity="other">\u0020days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">\u0020hour</item>
        <item quantity="other">\u0020hours</item>
    </plurals>
    <plurals name="mins">
        <item quantity="one">\u0020minute</item>
        <item quantity="other">\u0020minutes</item>
    </plurals>
    <string name="and">\u0020and\u0020</string>
    <string name="toast_alarmDeleted">The reminder at %s was deleted successfully.</string>
    <string name="toast_alarmSwitchedOff">The reminder at %s was switched off.</string>

    <!-- Activity_AlarmDetails -->
    <string name="actionBarTitle_newAlarm">New reminder</string>
    <string name="actionBarTitle_editAlarm">Edit reminder</string>
    <string name="actionBarTitle_snoozeOptions">Snooze options</string>
    <string name="actionBarTitle_repeatOptions">Repeat options</string>
    <string name="actionBarTitle_dateOptions">Reminder date</string>
    <string name="actionBarTitle_alarmMessage">Reminder Title</string>

    <!-- Fragment_AlarmDetails_Main -->
    <string name="saveButton">SAVE</string>
    <string name="cancelButton">Cancel</string>

    <string name="repeatButton">Repeat:</string>
    <string name="repeatNone">Off</string>
    <string name="alarmType">Reminder type:</string>
    <string name="alarmVolumeLabel">Reminder Volume:</string>
    <string name="snoozeLabel">Snooze:</string>
    <string name="snoozeOffLabel">Off</string>
    <string name="alarmDateLabel">Date:</string>
    <string name="alarmDate">%te\u0020%tm,\u0020%tY</string>

    <string-array name="alarmTypeSpinnerEntries">
        <item>Sound</item>
        <item>Vibrate</item>
        <item>Sound &amp; Vibrate</item>
    </string-array>

    <string name="snoozeOptionsTV_snoozeOn">%d mins, %d times</string>
    <string name="alarmToneLabel">Voice: Tap To Record</string>

    <string name="alarmMessageLabel">Tap To Speak</string>
    <string name="alarmMessage_default">Not set</string>

    <!-- Fragment_AlarmDetails_Snooze-->
    <string name="switchOn">On</string>
    <string name="switchOff">Off</string>

    <string name="snoozeFrequencyLabel">Snooze frequency:</string>
    <string name="snoozeFreq_three">3 times</string>
    <string name="snoozeFreq_five">5 times</string>
    <string name="snoozeFreq_ten">10 times</string>
    <string name="snoozeFreq_custom">Custom frequency:</string>
    <string name="snoozeFreq_customHint">Enter a number</string>

    <string name="snoozeIntervalLabel">Snooze interval:</string>
    <string name="snoozeInterval_five">5 minutes</string>
    <string name="snoozeInterval_ten">10 minutes</string>
    <string name="snoozeInterval_fifteen">15 minutes</string>
    <string name="snoozeInterval_custom">Custom interval (in mins):</string>
    <string name="snoozeInterval_customHint">Enter interval</string>

    <!-- AlarmAdapter -->
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound_and_vibrate">Sound &amp; Vibrate</string>

    <string name="time_24hour">%02d:%02d</string>
    <string name="time_12hour">%d:%02d\u0020%s</string>
    <string name="date">%s,\u0020%02d\u0020%s</string>

    <!-- Activity_RingAlarm-->
    <string name="alarmMessage">Reminder</string>
    <string name="alarmTime_24hour">%02d:%02d</string>
    <string name="snoozeAlarm">Snooze</string>

    <!-- Fragment_AlarmDetails_DatePicker-->
    <string name="pickDateLabel">Pick a date:</string>

    <!-- Fragment_AlarmDetails_RepeatOptions-->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- Fragment_AlarmDetails_Message -->
    <string name="message_label">Re-type the title of reminder:</string>

    <!-- Service_RingAlarm -->
    <string name="notifContent_ring">Reminder ringing.</string>
    <string name="notifContent_snooze">Reminder snoozed. Tap to dismiss it.</string>

    <!-- Activity_RingtonePicker -->
    <string name="chooseCustomTone">Choose from storage</string>
    <string name="defaultTone">Default</string>
    <string name="silentTone">Silent</string>
    <string name="play_tone">Play tone</string>
    <string name="ringtonePicker_defaultTitle">Select tone:</string>

    <!-- AlertDialog_DiscardChanges -->
    <string name="cancelDialogMessage">Discard changes?</string>
    <string name="cancelDialog_positive">Yes</string>
    <string name="cancelDialog_negative">No</string>

    <!-- AlertDialog_PermissionReason -->
    <string name="permissionReasonExp_normal">This app needs permission to read your device storage so that
    it can read and play the reminder sound. Without this permission, the app may fail to ring the reminder. Give the permission?</string>

    <string name="permissionReasonExp_ringtonePicker">This app needs permission to read your device storage
        so that it can read the tones. Without this permission, the app will not work. Give the permission?</string>

    <!-- Activity_Settings -->
    <string name="settings_title">Settings</string>
    <string name="shakeOp">If I <b>shake</b> the phone when an reminder rings,</string>
    <string name="powerBtnOp">If I press the <b>power button</b> when an reminder rings,</string>
    <string-array name="shakeAndPowerOptions">
        <item>Snooze the reminder.</item>
        <item>Dismiss the reminder.</item>
    </string-array>
    <string name="settings_snoozeOps"><b>Default snooze options</b>\n<small>(These will be the default snooze options
        when you create a new reminder.)</small></string>
    <string name="settings_snoozeInterval">Snooze interval in minutes:</string>
    <string name="settings_snoozeFreq">Snooze frequency:</string>

    <string name="settings_theme">Choose the theme:</string>
    <string-array name="themeOptions_noSystem">
        <item>According to time</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themeOptions_all">
        <item>According to time</item>
        <item>Light</item>
        <item>Dark</item>
        <item>Set by system</item>
    </string-array>

    <string name="settings_toneUri">Default reminder tone:</string>
    <string name="settings_volume">Default reminder volume:</string>
    <string name="settings_toneCheckbox">Automatically set new tones I select as default tones for new reminders</string>

    <string name="settings_shakeSensitivityMainLabel"><b>Shake sensitivity settings</b>\n<small>Test the sensitivity of the shake
        detector, and change it as you wish</small></string>
    <string name="shakeSensitivityChangeLabel"><small>Change sensitivity:</small></string>
    <string name="leastSensitiveLabel">\u2191\nLeast\nsensitive</string>
    <string name="mostSensitiveLabel">\u2191\nMost\nsensitive</string>
    <string name="testShake"><small><b>Test shake sensitivity</b>\nTap to enable the shake detector so that you can
        choose the sensitivity that correctly suits you.</small></string>

    <!-- Service_UpdateAlarm -->
    <string name="updateAlarm_notifMessage">Activating reminders. This may take a while…</string>
    <string name="updateAlarm_alarmMissedTitle">Reminder missed!</string>
    <string name="updateAlarm_alarmMissedText">The reminder at %s did not ring.</string>

    <!-- AlertDialog_TestShakeSensitivity -->
    <string name="title_shakeDetectionTest">Test sensitivity of shake detector</string>
    <string name="message_shakeDetectionTest">Shake your phone. A vibration will tell you that a shake event has
    been detected. Change the sensitivity as per your choice.</string>
    <string name="negative_shakeDetectionTest">Stop</string>
    
    <!-- AlertDialog_BatteryOptimizations -->
    <string name="batteryOptim_message">Please disable battery optimizations for this app. If this app is 
        optimized, it might not be able to ring the reminder.</string>
    <string name="batteryOptim_title">Disable battery optimizations</string>
    <string name="batteryOptim_positive">Proceed</string>
    <string name="batteryOptim_negative">Maybe later</string>
    <string name="batteryOptim_neutral">Never show again</string>

    <string name="defaultAlarmToneText">Tap to record:</string>
    <string name="defaultSpeakText">Title:</string>

</resources>